storage bug fix

--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -29,6 +29,7 @@
 <body>
   <div class="content">
     <div id="status"></div>
+    <div style="color:blue">You can find "Personal access tokens" in "Personal settings" of your GitHub accout profile.</div>
     <table>
       <tr>
         <td class="field">GitHub Personal access tokens:</td>
