--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -24,6 +24,12 @@
     button {
       width: 60px;
     }
+    .succ {
+      color: green;
+    }
+    .err {
+      color: red;
+    }
   </style>
 </head>
 <body>
