--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -38,7 +38,7 @@
     <div style="color:blue">You can find "Personal access tokens" in "Personal settings" of your GitHub accout profile.</div>
     <table>
       <tr>
-        <td class="field">GitHub Personal access tokens:</td>
+        <td class="field">GitHub Personal access token:</td>
         <td class="property"><input type="text" id="token" style="width:280px"/></td>
         <td><button id="token_save">Save</button></td>
       </tr>
