--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -54,6 +54,23 @@
         </td>
       </tr>
     </table>
+    <hr>
+    <table width="100%">
+      <tr>
+        <td class="field" width="50%">Only commit accepted code (GitHub):</td>
+        <td class="property">
+          <input type="radio" name="commit" value="accepted" />Yes
+          <input type="radio" name="commit" value="any" checked="checked"/>No
+        </td>
+      </tr>
+      <tr>
+        <td class="field" width="50%">Hide acceptance and difficulty:</td>
+        <td class="property">
+          <input type="radio" name="ac_difficulty" value="hide" />Yes
+          <input type="radio" name="ac_difficulty" value="show" checked="checked"/>No
+        </td>
+      </tr>
+    </table>
   </div>
   <script src="options.js"></script>
 </body>
