--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -72,12 +72,17 @@
           <input type="radio" name="ac_difficulty" value="show" checked="checked"/>No
         </td>
       </tr>
+      <tr>
+        <td class="field" width="50%">Default commit comment:</td>
+        <td class="property"><input type="text" id="comment" style="width:80%" /></td>
+      </tr>
     </table>
   </div>
   <div class="tips" style="color:gray">
     Tips: <br />
     - You can find "Personal access tokens" in "Personal settings" of your GitHub accout profile.<br />
-    - Click "Add" button to add a repository. If this repository does not exist, it will be created.
+    - Click "Add" button to add a repository. If this repository does not exist, it will be created.<br />
+    - If you don't provide a comment when commit to GitHub, the default commit comment will be used. Variables: {title} means the question name, {state} mean the result of your code, it may be "Accepted", "Compile Error", etc.
   </div>
   <script src="options.js"></script>
 </body>
