support to turn on/off all features

--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -66,6 +66,17 @@
         </td>
       </tr>
       <tr>
+        <td class="field" width="50%">Default commit comment:</td>
+        <td class="property"><input type="text" id="comment" style="width:80%" /></td>
+      </tr>
+      <tr>
+        <td class="field" width="50%">Show your progress:</td>
+        <td class="property">
+          <input type="radio" name="progress" value="show" checked="checked" />Yes
+          <input type="radio" name="progress" value="hide"/>No
+        </td>
+      </tr>
+      <tr>
         <td class="field" width="50%">Hide acceptance and difficulty:</td>
         <td class="property">
           <input type="radio" name="ac_difficulty" value="hide" />Yes
@@ -73,8 +84,11 @@
         </td>
       </tr>
       <tr>
-        <td class="field" width="50%">Default commit comment:</td>
-        <td class="property"><input type="text" id="comment" style="width:80%" /></td>
+        <td class="field" width="50%">Disable submit button for 10s:</td>
+        <td class="property">
+          <input type="radio" name="countdown" value="yes" checked="checked" />Yes
+          <input type="radio" name="countdown" value="no"/>No
+        </td>
       </tr>
     </table>
   </div>
