--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -98,6 +98,9 @@
     - Click "Add" button to add a repository. If this repository does not exist, it will be created.<br />
     - If you don't provide a comment when commit to GitHub, the default commit comment will be used. Variables: {title} means the question name, {state} means the result of your code, it may be "Accepted", "Compile Error", etc.
   </div>
+  <div>
+    <a id="oauth">GitHub</a>
+  </div>
   <script src="options.js"></script>
 </body>
 </html>
