add tips, input reposiroty name not URL

--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -95,7 +95,7 @@
   <div class="tips" style="color:gray">
     Tips: <br />
     - You can find "Personal access tokens" in "Personal settings" of your GitHub accout profile.<br />
-    - Click "Add" button to add a repository. If this repository does not exist, it will be created.<br />
+    - Click "Add" button to add a repository. If this repository does not exist, it will be created. Note: Input the repository name, not the URL.<br />
     - If you don't provide a comment when commit to GitHub, the default commit comment will be used. Variables: {title} means the question name, {state} means the result of your code, it may be "Accepted", "Compile Error", etc.
   </div>
   <script src="options.js"></script>
