--- a/leetcode-ext/popup.html
+++ b/leetcode-ext/popup.html
@@ -27,8 +27,11 @@
 </head>
 <body style="width: 200px">
 <table>
-  <tr id="go_leetcode" href="https://leetcode.com/problemset/algorithms/">
+  <tr id="go_leetcode">
     <td>Go to LeetCode.com</td>
+  </tr>
+  <tr id="go_github">
+    <td>Go to GitHub Repository</td>
   </tr>
 </table>
 </body>
