progress: add chart

--- a/leetcode-ext/options.html
+++ b/leetcode-ext/options.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>Leetcode extension options</title>
-  <script type="text/javascript" src="./jquery.js"></script>
-  <script type="text/javascript" src="./webtoolkit.base64.js"></script>
+  <script type="text/javascript" src="./lib/jquery.js"></script>
+  <script type="text/javascript" src="./lib/webtoolkit.base64.js"></script>
   <style type="text/css">
     body {
       width: 500px;
