--- a/leetcode-ext/popup/popup.html
+++ b/leetcode-ext/popup/popup.html
@@ -23,7 +23,7 @@
       color: white;
     }
   </style>
-  <script type="text/javascript" src="popup.js"></script>
+  <script type="text/javascript" src="./popup.js"></script>
 </head>
 <body style="width: 200px">
 <table>
