--- a/leetcode-ext/options/options.html
+++ b/leetcode-ext/options/options.html
@@ -111,7 +111,8 @@
   <div class="tips" style="color:gray">
     Tips: <br />
     - Click "Add" button to add a repository. If this repository does not exist, it will be created. Note: Input the repository name, not the URL.<br />
-    - If you don't provide a comment when commit to GitHub, the default commit comment will be used. Variables: {title} means the question name, {state} means the result of your code, it may be "Accepted", "Compile Error", etc.
+    - If you don't provide a comment when commit to GitHub, the default commit comment will be used. Variables: {title} means the question name, {state} means the result of your code, it may be "Accepted", "Compile Error", etc.<br />
+    - Support: <a href="https://github.com/binarylu/leetcode-ext/issues">https://github.com/binarylu/leetcode-ext/issues</a>
   </div>
   <script src="./options.js"></script>
 </body>
