add config file

--- a/leetcode-ext/options/options.html
+++ b/leetcode-ext/options/options.html
@@ -4,6 +4,7 @@
   <title>Leetcode extension options</title>
   <script type="text/javascript" src="../lib/jquery.js"></script>
   <script type="text/javascript" src="../lib/webtoolkit.base64.js"></script>
+  <script type="text/javascript" src="../config.js"></script>
   <script type="text/javascript" src="../lib/github_api.js"></script>
   <link rel="stylesheet" href="auth-buttons.css">
   <style type="text/css">
