add option to commit question.md automitically

--- a/leetcode-ext/options/options.html
+++ b/leetcode-ext/options/options.html
@@ -90,6 +90,13 @@
         <td class="property"><input type="text" id="comment" style="width:80%" /></td>
       </tr>
       <tr>
+        <td class="field">Auto commit question content:</td>
+        <td class="property">
+          <input type="radio" name="auto_commit" value="question"/>Yes
+          <input type="radio" name="auto_commit" value="none" checked="checked" />No
+        </td>
+      </tr>
+      <tr>
         <td class="field">Show your progress:</td>
         <td class="property">
           <input type="radio" name="progress" value="show" checked="checked" />Yes
