add item 'settings'

--- a/leetcode-ext/popup/popup.html
+++ b/leetcode-ext/popup/popup.html
@@ -31,7 +31,10 @@
     <td>Go to LeetCode.com</td>
   </tr>
   <tr id="go_github">
-    <td>Go to GitHub Repository</td>
+    <td>Go to Your GitHub Repository</td>
+  </tr>
+  <tr id="go_settings">
+    <td style="border-top:1px solid lightgray;">Settings</td>
   </tr>
 </table>
 </body>
