use jquery to add menu items

--- a/leetcode-ext/popup/popup.html
+++ b/leetcode-ext/popup/popup.html
@@ -23,19 +23,11 @@
       color: white;
     }
   </style>
+  <script type="text/javascript" src="../lib/jquery.js"></script>
   <script type="text/javascript" src="./popup.js"></script>
 </head>
 <body style="width: 200px">
-<table>
-  <tr id="go_leetcode">
-    <td>Go to LeetCode.com</td>
-  </tr>
-  <tr id="go_github">
-    <td>Go to Your GitHub Repository</td>
-  </tr>
-  <tr id="go_settings">
-    <td style="border-top:1px solid lightgray;">Settings</td>
-  </tr>
+<table id="menu">
 </table>
 </body>
 </html>
