Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 <a id="leetcode-extension" class="anchor" href="#leetcode-extension" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LeetCode Extension</h1>
 
 <h2>
-<a id="1-description" class="anchor" href="#1-description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1 Description</h2>
+<a id="announcement" class="anchor" href="#announcement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>*<strong><em>Announcement</em></strong>*</h2>
+
+<p>Leetcode has requested me to remove the company metadata and premium question description. I have no enough time recently to modify my codes, so I close my extension on Chrome Store. leetcode extension will return ASAP when I got time to do it. Thank all my supporters.</p>
+
+<h2>
+<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
 
 <p>This is an extension for chrome.</p>
 
@@ -38,7 +43,7 @@
 <p><code>server</code> folder is the source code for crawling the problem tags from leetcode.com.</p>
 
 <h2>
-<a id="2-usage" class="anchor" href="#2-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2 Usage</h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
 
 <p>There are six major functions:</p>
 
@@ -49,6 +54,7 @@
 <li>Commit your code to your GitHub.</li>
 <li>After running or submitting code, disable the button for 10 seconds to avoid the error that submitting too frequently.</li>
 <li>Show the content of locked problems and the problem list of each company tag.</li>
+<li>Show quick access link for submission and discussion.</li>
 </ol>
 
 <p>For <code>1</code>, <code>2</code> and <code>5</code>, they can be turned on / off in extension option page.</p>
@@ -63,9 +69,92 @@ If you are not a subscriber, the linke of each company tag will be changed, ther
 In problem page, the company tag button will appear even if you are not a subscriber.  </p>
 
 <h2>
-<a id="3-acknowledge" class="anchor" href="#3-acknowledge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3 Acknowledge</h2>
+<a id="contribution" class="anchor" href="#contribution" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribution</h2>
+
+<p><strong>Quick Access Link</strong> is contributed by <a href="https://github.com/petrosliu">Yiding Liu</a>.</p>
+
+<h2>
+<a id="acknowledge" class="anchor" href="#acknowledge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledge</h2>
 
 <p>This project is just for study, if you can afford, please subscrib to support <a href="https://leetcode.com">https://leetcode.com</a>.</p>
+
+<h2>
+<a id="release-notes" class="anchor" href="#release-notes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Release Notes</h2>
+
+<p>v1.1.2 (2016-06-02)  </p>
+
+<ul>
+<li>Optimize UI.</li>
+<li>Add update notification.</li>
+</ul>
+
+<p>v1.1.1 (2016-06-01)</p>
+
+<ul>
+<li>Bug fix: The bug that hiding locked problems will hide all the problems has been fixed.</li>
+</ul>
+
+<p>v1.1.0 (2016-05-28)</p>
+
+<ul>
+<li>Add quick access link for submission and discussion.</li>
+</ul>
+
+<p>v1.0.5  (2016-04-23)</p>
+
+<ul>
+<li>Add option to commit question.md automitically when entering problem page.</li>
+</ul>
+
+<p>v1.0.0 (2016-04-18)</p>
+
+<ul>
+<li>show locked problems (click the green icon)</li>
+<li>show progress of each company tag</li>
+<li>show problems in each company tag</li>
+<li>add company tag in problem page</li>
+</ul>
+
+<p>v0.6.0 (2016-04-09)</p>
+
+<ul>
+<li>Support OAuth, and personal access token is no longer supported. Please open option page to login with OAuth.</li>
+</ul>
+
+<p>v0.5.0 (2016-04-09)</p>
+
+<ul>
+<li>Support to hide locked problem</li>
+<li>Add chart to show each difficuly's progress</li>
+</ul>
+
+<p>v0.4.7 (2016-04-08)</p>
+
+<ul>
+<li>Fit the new leetcode UI for difficulty.</li>
+<li>bugfix</li>
+</ul>
+
+<p>v0.4.0 (2016-03-24)</p>
+
+<ul>
+<li>Add countdown for "run code" button and "submit solution" button, so that you will never run/submit too frequently.</li>
+<li>Support to set default comment.</li>
+<li>Add popup, click LeetCode Extension icon, you can go to leetcode.com directly.</li>
+</ul>
+
+<p>v0.3.5 (2016-03-22)</p>
+
+<ul>
+<li>Support to add an existing repository</li>
+</ul>
+
+<p>v0.3.0 (2016-03-22)</p>
+
+<ul>
+<li>Hide acceptance and difficulty.</li>
+<li>Add option to commit only accepted codes.</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/binarylu/leetcode-ext">Leetcode-ext</a> is maintained by <a href="https://github.com/binarylu">binarylu</a>.</span>
